<resources>
    <string name="app_name">Time2Speak</string>
    <string name="ExplicacionSpeak">Presiona REPRODUCIR para escuchar la pronunciación</string>
    <string name="reproducir">Reproducir</string>
    <string name="tituloLetras">Vamos a practicar</string>
    <string name="repeticionNumero">0 / 10</string>
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="registro">Registrarse</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="nacimiento">Fecha de Nacimiento</string>
    <string name="contrarepetir">Repetir Contraseña</string>
    <string name="mascota">Nombre de la mascota</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_detener">detener</string>
</resources>
